--- a/_assets/scss/_site-header.scss
+++ b/_assets/scss/_site-header.scss
@@ -19,6 +19,22 @@
         background-position: 3% 97%;
         height: 450px;
         width: 100%;
+        @include mq(1024px){
+            height: 400px;
+        }
+
+        @include mq(768px){
+            height: 350px;
+            background-position: 25% 75%;
+        }
+
+        @include mq(640px){
+            background-position: 35% 65%;
+        }
+
+        @include mq(480px){
+            background-position: 55% 45%;
+        }
 
         .wrapper{
             display: flex;
@@ -26,6 +42,7 @@
             align-items: center;
             font-size: 20px;
             position: sticky;
+
             .site-logo {
                 align-items: center;
                 display: flex;
@@ -38,6 +55,15 @@
                 i {
                     font-size: 30px;
                     padding-right: 1rem;
+                }
+                p{
+                    @include mq(640px){
+                        font-size: 18px;
+                    }
+    
+                    @include mq(480px){
+                        font-size: 16px;
+                    }
                 }
             }
         }
@@ -63,6 +89,10 @@
 
                 @include mq(480px){
                     font-size: 28px;
+                    padding-top: 3rem;
+                }
+                @include mq(320px){
+                    padding-top: 2rem;
                 }
             }
             p {
@@ -90,6 +120,9 @@
                 @include mq(480px){
                     font-size: 14px;
                     width: 80%;
+                }
+                @include mq(320px){
+                    margin-bottom: 0.5rem;
                 }
             }
             a{
@@ -174,8 +207,15 @@
 
 @media screen and (max-width: 1024px) {
     .site{
-        
         .wrapper {
+            .icon:before {
+                display: inline-block;
+                font-family: 'Font Awesome 5 Free';
+                font-weight: 900;
+            }
+            .icon-hamburger:before {
+                content: '\f0c9';
+            }
             .hamburger_label {
                 display: block;
                 margin-left: auto;
@@ -183,12 +223,14 @@
                     cursor: pointer;
                 }
             }
+
             .site-nav {
                 position: absolute;
                 top: 0;
                 left: 0;
                 opacity: 0;
                 display: none;
+                margin-left: 0;
         
                 ul {
                     opacity: 0;
@@ -204,6 +246,7 @@
                         background: rgb(21, 47, 99);
                         text-align: center;
                         margin-right: 0;
+                        font-size: 16px;
                         a{
                             &:hover{
                                 border: none;
@@ -216,6 +259,9 @@
         } 
         
         .hamburger_checkbox:checked + .site-header {
+            .icon-hamburger:before {
+                content: '\f00d';
+            }
             .hamburger_label {
                 margin-left: auto;
             }
@@ -230,7 +276,7 @@
                     opacity: 1;
                     width: 100%;
                     position: absolute;
-                    top: 4.5em; left: 0; right: 10em;
+                    top: 4em; left: 0;
     
                     li {
                         margin: 0;
@@ -238,10 +284,11 @@
                         padding: 0.7em 0;
                         opacity: 1;
                         width: 100%;
-                        background: rgb(21, 47, 99);
+                        background: rgb(7, 18, 39);
                         animation: none;
-                    
-                        &:last-child {padding-bottom: 0.8em;}
+
+                        &:first-child {padding-top: 1.5em;}
+                        &:last-child {padding-bottom: 2em;}
                     
                         /*&:nth-child(2) {transition-delay: 0.1s}
                         &:nth-child(3) {transition-delay: 0.2s}
