--- a/_assets/scss/pages/index.scss
+++ b/_assets/scss/pages/index.scss
@@ -12,7 +12,7 @@
 
             &:after{
                 content: '';
-                width: 700px;
+                width: 80%;
                 height: 1px;
                 background-color: rgb(189, 189, 189);
                 display: block;
