--- a/docs/css/pages/vehicles.css
+++ b/docs/css/pages/vehicles.css
@@ -1,8 +1,8 @@
 .site-main {
+  margin: 1rem;
   color: #152f63; }
   .site-main h2 {
-    text-align: center;
-    padding-top: 1rem; }
+    text-align: center; }
     .site-main h2:after {
       content: '';
       width: 100px;
@@ -10,80 +10,109 @@
       background-color: #152f63;
       display: block;
       margin: 1rem auto; }
-  .site-main section {
+  .site-main .vehicle-type {
+    text-align: center;
+    padding: 1.5rem; }
+  .site-main ul {
     display: grid;
     grid-template-columns: repeat(9, 1fr);
     grid-gap: 1em;
-    grid-auto-flow: dense; }
-    .site-main section img {
-      display: block;
-      width: 420px;
-      height: auto;
+    grid-auto-flow: dense;
+    justify-items: center; }
+    .site-main ul li {
+      list-style: none;
+      outline: 4px solid #152f63;
       grid-column: span 3;
-      -webkit-animation: slideIn 0.3s ease-in;
-              animation: slideIn 0.3s ease-in;
-      -webkit-animation-fill-mode: both;
-              animation-fill-mode: both; }
-      .site-main section img:nth-of-type(2) {
-        -webkit-animation-delay: 0.2s;
-                animation-delay: 0.2s; }
-      .site-main section img:nth-of-type(3) {
-        -webkit-animation-delay: 0.4s;
-                animation-delay: 0.4s; }
-      .site-main section img:nth-of-type(4) {
-        -webkit-animation-delay: 0.6s;
-                animation-delay: 0.6s; }
-      .site-main section img:nth-of-type(5) {
-        -webkit-animation-delay: 0.8s;
-                animation-delay: 0.8s; }
-      .site-main section img:nth-of-type(6) {
-        -webkit-animation-delay: 1.0s;
-                animation-delay: 1.0s; }
-      .site-main section img:nth-of-type(7) {
-        -webkit-animation-delay: 1.2s;
-                animation-delay: 1.2s; }
-      .site-main section img:nth-of-type(8) {
-        -webkit-animation-delay: 1.4s;
-                animation-delay: 1.4s; }
-      .site-main section img:nth-of-type(9) {
-        -webkit-animation-delay: 1.6s;
-                animation-delay: 1.6s; }
-      .site-main section img:nth-of-type(10) {
-        -webkit-animation-delay: 1.8s;
-                animation-delay: 1.8s; }
-      .site-main section img:nth-of-type(11) {
-        -webkit-animation-delay: 2.0s;
-                animation-delay: 2.0s; }
-      .site-main section img:nth-of-type(12) {
-        -webkit-animation-delay: 2.2s;
-                animation-delay: 2.2s; }
-      .site-main section img:nth-of-type(13) {
-        -webkit-animation-delay: 2.4s;
-                animation-delay: 2.4s; }
-      .site-main section img:nth-of-type(14) {
-        -webkit-animation-delay: 2.6s;
-                animation-delay: 2.6s; }
-      .site-main section img:nth-of-type(15) {
-        -webkit-animation-delay: 2.8s;
-                animation-delay: 2.8s; }
-      .site-main section img:nth-of-type(16) {
-        -webkit-animation-delay: 3.0s;
-                animation-delay: 3.0s; }
-      .site-main section img:nth-of-type(17) {
-        -webkit-animation-delay: 3.2s;
-                animation-delay: 3.2s; }
-      .site-main section img:nth-of-type(18) {
-        -webkit-animation-delay: 3.4s;
-                animation-delay: 3.4s; }
-      .site-main section img:nth-of-type(19) {
-        -webkit-animation-delay: 3.6s;
-                animation-delay: 3.6s; }
-      .site-main section img:nth-of-type(20) {
-        -webkit-animation-delay: 3.8s;
-                animation-delay: 3.8s; }
-      .site-main section img:nth-of-type(21) {
-        -webkit-animation-delay: 4.0s;
-                animation-delay: 4.0s; }
-      .site-main section img:nth-of-type(22) {
-        -webkit-animation-delay: 4.2s;
-                animation-delay: 4.2s; }
+      display: flex;
+      width: 100%;
+      box-shadow: 0 0 0.6em 0.3em #152f63; }
+      .site-main ul li:hover .img-description {
+        opacity: 1; }
+      .site-main ul li input {
+        display: none; }
+      .site-main ul li label {
+        /*display: block;
+                    position: relative;
+                    overflow: hidden;
+                    */
+        display: flex;
+        background: #fff;
+        position: relative;
+        width: 100%;
+        align-items: center;
+        justify-content: center;
+        padding: 0.5em;
+        cursor: pointer; }
+        .site-main ul li label img {
+          display: block;
+          height: auto;
+          -o-object-fit: cover;
+             object-fit: cover;
+          width: 90%;
+          height: auto; }
+        .site-main ul li label .img-description {
+          position: absolute;
+          bottom: 0;
+          width: 100%;
+          padding: 10px;
+          background-color: rgba(21, 47, 99, 0.9);
+          color: #fff;
+          opacity: 0; }
+        .site-main ul li label span {
+          position: absolute;
+          top: 0;
+          left: 0;
+          right: 0;
+          bottom: 0; }
+        .site-main ul li label:before {
+          display: block;
+          content: '';
+          /*padding-top: calc(50% - 1em);*/ }
+        .site-main ul li label.close {
+          display: none;
+          font-size: 2em;
+          width: 2em;
+          height: 2em;
+          line-height: 1;
+          align-items: center;
+          justify-content: center;
+          transition: transform 0.3s ease-in-out;
+          position: fixed;
+          top: 1em;
+          right: 1em;
+          background: #000;
+          color: #FFF;
+          z-index: 300;
+          cursor: pointer; }
+          .site-main ul li label.close:hover {
+            transform: scale(1.1);
+            outline: 0.5em solid #FFF; }
+      .site-main ul li input:checked ~ label.close {
+        display: flex; }
+      .site-main ul li input:checked ~ a {
+        display: flex; }
+      .site-main ul li a {
+        display: none;
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 50vw;
+        height: 80vh;
+        overflow: hidden;
+        z-index: 100;
+        box-shadow: 0 0 100vw 100vw rgba(0, 0, 0, 0.9);
+        background: rgba(0, 0, 0, 0.9); }
+        .site-main ul li a span {
+          position: absolute;
+          top: 0;
+          left: 0;
+          right: 0;
+          bottom: 0; }
+        .site-main ul li a img {
+          width: 100%;
+          height: auto;
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%); }
