Added new transitions

--- a/_assets/scss/_animations.scss
+++ b/_assets/scss/_animations.scss
@@ -1,4 +1,4 @@
-@keyframes slideToRight {
+/*@keyframes slideToRight {
     from {
         opacity: 0;
         transform: translateX(-1em);
@@ -8,4 +8,4 @@
         opacity: 1;
         transform: translateX(0);
     }
-}
+}*/
