--- a/_assets/scss/_site-header.scss
+++ b/_assets/scss/_site-header.scss
@@ -50,8 +50,17 @@
                 padding: 1em 0;
                 text-decoration: none;
                 letter-spacing: 0.1em;
-                animation: slideToRight 0.4s ease-in-out;
-                
+                opacity: 0;
+                transform: translateX(-1em);
+                transition: opacity 0.3s ease-in, transform 0.3s ease-in-out;
+
+                @at-root body.loaded{
+                    .site-header .site-logo{
+                        opacity: 1;
+                        transform: translateX(0);
+                    }
+                }
+
                 i {
                     font-size: 30px;
                     padding-right: 1rem;
@@ -162,144 +171,4 @@
             }
         }
     }
-    &-nav {
-        display: flex;
-        justify-content: space-between;
-        margin-left: auto;
-        align-items: center;
-        ul{
-            display: flex;
-            margin: 0 auto;
-            width: 100%;
-            li{
-                display: block;
-                list-style-type: none;
-                margin-right: 3.5rem;
-                animation: slideToRight 0.4s ease-in-out;
-                padding: 0.5rem 0;
-                
-
-                @for $i from 1 through 5{
-                    &:nth-child(#{$i}){
-                        animation-delay: $i * 0.1s;
-                    }
-                }
-                a{
-                    letter-spacing: 0.15em;
-                    color: #fff;
-                    text-decoration: none;
-                    font-weight: bold;
-                    padding-bottom: 0.5rem;
-                    
-                    
-                    &:hover{
-                        border-bottom: 1px solid white;
-                    }
-                }
-            }
-            .selected a{
-                border-bottom: 1px solid white;
-            }
-        }
-    }
-    
-}
-
-@media screen and (max-width: 1024px) {
-    .site{
-        .wrapper {
-            .icon:before {
-                display: inline-block;
-                font-family: 'Font Awesome 5 Free';
-                font-weight: 900;
-            }
-            .icon-hamburger:before {
-                content: '\f0c9';
-            }
-            .hamburger_label {
-                display: block;
-                margin-left: auto;
-                &:hover{
-                    cursor: pointer;
-                }
-            }
-
-            .site-nav {
-                position: absolute;
-                top: 0;
-                left: 0;
-                opacity: 0;
-                display: none;
-                margin-left: 0;
-        
-                ul {
-                    opacity: 0;
-                    display: flex;
-                    flex-direction: column;
-        
-                    li {
-                        opacity: 0;
-                        transition: opacity 0.15s ease-in;
-                        background: #fff;
-                        color: black;
-                        width: 100%;
-                        background: rgb(21, 47, 99);
-                        text-align: center;
-                        margin-right: 0;
-                        font-size: 16px;
-                        a{
-                            &:hover{
-                                border: none;
-                            }
-                            
-                        }
-                    }
-                }
-            }      
-        } 
-        
-        .hamburger_checkbox:checked + .site-header {
-            .icon-hamburger:before {
-                content: '\f00d';
-            }
-            .hamburger_label {
-                margin-left: auto;
-            }
-            .site-nav{
-                display: block;
-                position: static;
-                opacity: 1;
-                ul {
-                    display: flex;
-                    flex-direction: column;
-                    align-items: center;
-                    opacity: 1;
-                    width: 100%;
-                    position: absolute;
-                    top: 4em; left: 0;
-    
-                    li {
-                        margin: 0;
-                        text-align: center;
-                        padding: 0.7em 0;
-                        opacity: 1;
-                        width: 100%;
-                        background: rgb(7, 18, 39);
-                        animation: none;
-
-                        &:first-child {padding-top: 1.5em;}
-                        &:last-child {padding-bottom: 2em;}
-                    
-                        /*&:nth-child(2) {transition-delay: 0.1s}
-                        &:nth-child(3) {transition-delay: 0.2s}
-                        &:nth-child(4) {transition-delay: 0.3s}
-                        */
-                        &:last-child {
-                            margin-bottom: 1em;
-                        }
-                    }
-                }
-            }
-        }
-    } 
 }
