--- a/_assets/scss/pages/vehicles.scss
+++ b/_assets/scss/pages/vehicles.scss
@@ -89,6 +89,7 @@
                         background-color: rgba(21, 47, 99,0.9);
                         color: #fff;
                         opacity: 0;
+                        transition: opacity 0.3s ease-in;
                     }
         
                     span {
