--- a/_assets/scss/site.scss
+++ b/_assets/scss/site.scss
@@ -1,5 +1,8 @@
 @import 'reset';
 @import 'mixins';
+@import 'site-main-transitions';
 @import 'site-header';
+@import 'site-navigation';
+@import 'site-navigation-responsive';
 @import 'site-footer';
 @import 'animations';
