--- a/docs/css/pages/vehicles.css
+++ b/docs/css/pages/vehicles.css
@@ -66,7 +66,8 @@
           padding: 10px;
           background-color: rgba(21, 47, 99, 0.9);
           color: #fff;
-          opacity: 0; }
+          opacity: 0;
+          transition: opacity 0.3s ease-in; }
         .site-main ul li label span {
           position: absolute;
           top: 0;
