--- a/docs/css/site.css
+++ b/docs/css/site.css
@@ -20,6 +20,18 @@ html {
   html {
     font-size: 16px; } }
 
+.site-main {
+  opacity: 0;
+  transform: translateY(-2em);
+  transition: opacity 0.2s ease-in, transform 0.2s ease-in-out;
+  transition-delay: 1.1s; }
+  @media screen and (max-width: 1024px) {
+    .site-main {
+      transition-delay: 0.3s; } }
+  body.loaded .site-main {
+    opacity: 1;
+    transform: translateY(0); }
+
 .site .hamburger_checkbox {
   position: absolute;
   top: 0;
@@ -66,8 +78,12 @@ html {
       padding: 1em 0;
       text-decoration: none;
       letter-spacing: 0.1em;
-      -webkit-animation: slideToRight 0.4s ease-in-out;
-              animation: slideToRight 0.4s ease-in-out; }
+      opacity: 0;
+      transform: translateX(-1em);
+      transition: opacity 0.3s ease-in, transform 0.3s ease-in-out; }
+      body.loaded .site-header .site-logo {
+        opacity: 1;
+        transform: translateX(0); }
       .site-header .wrapper .site-logo i {
         font-size: 30px;
         padding-right: 1rem; }
@@ -170,24 +186,23 @@ html {
       display: block;
       list-style-type: none;
       margin-right: 3.5rem;
-      -webkit-animation: slideToRight 0.4s ease-in-out;
-              animation: slideToRight 0.4s ease-in-out;
-      padding: 0.5rem 0; }
+      padding: 0.5rem 0;
+      opacity: 0;
+      transform: translateX(-1em);
+      transition: opacity 0.3s ease-in, transform 0.3s ease-in-out; }
+      body.loaded .site-nav li {
+        opacity: 1;
+        transform: translateX(0); }
       .site-nav ul li:nth-child(1) {
-        -webkit-animation-delay: 0.1s;
-                animation-delay: 0.1s; }
+        transition-delay: 0.5s; }
       .site-nav ul li:nth-child(2) {
-        -webkit-animation-delay: 0.2s;
-                animation-delay: 0.2s; }
+        transition-delay: 0.6s; }
       .site-nav ul li:nth-child(3) {
-        -webkit-animation-delay: 0.3s;
-                animation-delay: 0.3s; }
+        transition-delay: 0.7s; }
       .site-nav ul li:nth-child(4) {
-        -webkit-animation-delay: 0.4s;
-                animation-delay: 0.4s; }
+        transition-delay: 0.8s; }
       .site-nav ul li:nth-child(5) {
-        -webkit-animation-delay: 0.5s;
-                animation-delay: 0.5s; }
+        transition-delay: 0.9s; }
       .site-nav ul li a {
         letter-spacing: 0.15em;
         color: #fff;
@@ -216,7 +231,6 @@ html {
     top: 0;
     left: 0;
     opacity: 0;
-    display: none;
     margin-left: 0; }
     .site .wrapper .site-nav ul {
       opacity: 0;
@@ -224,14 +238,9 @@ html {
       flex-direction: column; }
       .site .wrapper .site-nav ul li {
         opacity: 0;
-        transition: opacity 0.15s ease-in;
-        background: #fff;
-        color: black;
         width: 100%;
-        background: #152f63;
-        text-align: center;
-        margin-right: 0;
-        font-size: 16px; }
+        font-size: 16px;
+        transition: opacity 0.35s ease-in; }
         .site .wrapper .site-nav ul li a:hover {
           border: none; }
   .site .hamburger_checkbox:checked + .site-header .icon-hamburger:before {
@@ -257,19 +266,30 @@ html {
         padding: 0.7em 0;
         opacity: 1;
         width: 100%;
-        background: #071227;
-        -webkit-animation: none;
-                animation: none;
-        /*&:nth-child(2) {transition-delay: 0.1s}
-                        &:nth-child(3) {transition-delay: 0.2s}
-                        &:nth-child(4) {transition-delay: 0.3s}
-                        */ }
+        background: #071227; }
+        .site .hamburger_checkbox:checked + .site-header .site-nav ul li:hover a {
+          color: #627599; }
         .site .hamburger_checkbox:checked + .site-header .site-nav ul li:first-child {
           padding-top: 1.5em; }
         .site .hamburger_checkbox:checked + .site-header .site-nav ul li:last-child {
           padding-bottom: 2em; }
+        .site .hamburger_checkbox:checked + .site-header .site-nav ul li:nth-child(1) {
+          transition-delay: 0.1s; }
+        .site .hamburger_checkbox:checked + .site-header .site-nav ul li:nth-child(2) {
+          transition-delay: 0.2s; }
+        .site .hamburger_checkbox:checked + .site-header .site-nav ul li:nth-child(3) {
+          transition-delay: 0.3s; }
+        .site .hamburger_checkbox:checked + .site-header .site-nav ul li:nth-child(4) {
+          transition-delay: 0.4s; }
+        .site .hamburger_checkbox:checked + .site-header .site-nav ul li:nth-child(5) {
+          transition-delay: 0.5s; }
         .site .hamburger_checkbox:checked + .site-header .site-nav ul li:last-child {
-          margin-bottom: 1em; } }
+          margin-bottom: 1em; }
+      .site .hamburger_checkbox:checked + .site-header .site-nav ul .selected {
+        background: #1d4183; }
+        .site .hamburger_checkbox:checked + .site-header .site-nav ul .selected a {
+          border: none;
+          background: #1d4183; } }
 
 .site-footer {
   background: #152f63;
@@ -289,18 +309,14 @@ html {
     .site-footer {
       font-size: 12px; } }
 
-@-webkit-keyframes slideToRight {
-  from {
-    opacity: 0;
-    transform: translateX(-1em); }
-  to {
-    opacity: 1;
-    transform: translateX(0); } }
+/*@keyframes slideToRight {
+    from {
+        opacity: 0;
+        transform: translateX(-1em);
+    }
 
-@keyframes slideToRight {
-  from {
-    opacity: 0;
-    transform: translateX(-1em); }
-  to {
-    opacity: 1;
-    transform: translateX(0); } }
+    to {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}*/
