--- a/docs/css/pages/vehicles.css
+++ b/docs/css/pages/vehicles.css
@@ -18,7 +18,8 @@
     grid-template-columns: repeat(9, 1fr);
     grid-gap: 1em;
     grid-auto-flow: dense;
-    justify-items: center; }
+    justify-items: center;
+    position: relative; }
     @media screen and (max-width: 768px) {
       .site-main ul {
         grid-template-columns: repeat(8, 1fr); } }
@@ -80,13 +81,47 @@
           align-items: center;
           justify-content: center;
           transition: transform 0.3s ease-in-out;
-          position: fixed;
-          top: 1em;
-          right: 1em;
+          /*position: fixed;*/
+          position: absolute;
+          top: 12em;
+          right: 8em;
           background: #000;
           color: #fff;
           z-index: 300;
           cursor: pointer; }
+          .site-main .trolleybuses .close {
+            top: -2em;
+            right: 8em; }
+            @media screen and (max-width: 1024px) {
+              .site-main .trolleybuses .close {
+                top: -4em;
+                right: 4em; } }
+            @media screen and (max-width: 768px) {
+              .site-main .trolleybuses .close {
+                top: -2em;
+                right: 4em; } }
+            @media screen and (max-width: 480px) {
+              .site-main .trolleybuses .close {
+                top: 10em;
+                right: 2em; } }
+          .site-main .trams .close {
+            top: 4em;
+            right: 8em; }
+            @media screen and (max-width: 1024px) {
+              .site-main .trams .close {
+                top: 2em;
+                right: 4em; } }
+            @media screen and (max-width: 768px) {
+              .site-main .trams .close {
+                top: 12em;
+                right: 4em; } }
+            @media screen and (max-width: 480px) {
+              .site-main .trams .close {
+                top: 10em;
+                right: 2em; } }
+          .site-main .metro .close {
+            top: -7em;
+            right: 8em; }
           .site-main ul li label.close:hover {
             transform: scale(1.1);
             outline: 0.2em solid #fff; }
@@ -96,7 +131,8 @@
         display: flex; }
       .site-main ul li a {
         display: none;
-        position: fixed;
+        /*position: fixed;*/
+        position: absolute;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
