--- a/_assets/scss/_reset.scss
+++ b/_assets/scss/_reset.scss
@@ -8,7 +8,7 @@
 
 html {
     box-sizing: border-box;
-    font-family: 'Roboto', sans-serif;
+    font: 16px/1.5 'Roboto', sans-serif;
 }
 
 @media (max-width: 600px) {
