--- a/_assets/scss/pages/contacts.scss
+++ b/_assets/scss/pages/contacts.scss
@@ -26,7 +26,6 @@
             margin: 1rem auto;
             width: 90%;
             padding-bottom: 2rem;
-            font-size: 20px;
             display: flex;
             justify-content: center;
             align-items: center;          
@@ -108,6 +107,17 @@
                     li {
                         flex-basis: 10%;
                     }
+                }
+            }
+        }
+        .map{
+            margin: 0 auto;
+            text-align: center;
+            margin-bottom: 2rem;
+
+            @include mq(768px) {
+                iframe{
+                    width: 90%;
                 }
             }
         }
