--- a/_assets/scss/pages/history.scss
+++ b/_assets/scss/pages/history.scss
@@ -7,6 +7,17 @@
 .site {
     &-main {
         color: rgb(21, 47, 99);
+        max-width: 70em;
+        margin: 0 auto;
+        @include mq(1024px) {
+            max-width: 80em;
+            margin: 0 3.5rem;
+        }
+
+        @include mq(768px) {
+            margin: 0;
+        }
+
         h2 {
             text-align: center;
 
@@ -22,22 +33,21 @@
         section {
             border-bottom: 1px solid rgb(189, 189, 189);
             margin: 1rem auto;
-            width: 90%;
             padding-bottom: 2rem;
-            font-size: 15px;
 
             @include mq(1024px) {
-                font-size: 13px;
+                font-size: 14px;
                 padding-bottom: 1.5rem;
             }
     
             @include mq(768px) {
-                font-size: 11px;
+                font-size: 12px;
                 padding-bottom: 1.2rem;
+                width: 90%;
             }
     
             @include mq(480px) {
-                font-size: 10px;
+                font-size: 11px;
                 padding-bottom: 0.7rem;
             }
 
@@ -57,40 +67,39 @@
 
             .left {
                 float: left;
-                margin: 0.5rem 1rem 0.5rem 0.5rem;
+                margin: 2em;
 
                 @include mq(1024px) {
-                    margin: 0.4rem 0.8rem 0.4rem 0.6rem;
+                    margin: 1em;
                 }
         
                 @include mq(768px) {
-                    margin: 0.3rem 0.6rem 0.3rem 0.6rem;
+                    margin: 0.6rem;
                 }
         
                 @include mq(480px) {
-                    margin: 0.2rem 0.5rem 0.2rem 0.5rem;
+                    margin: 0.5rem;
                 }
             }
 
             .right {
                 float: right;
-                margin: 0.5rem 0.5rem 0.5rem 1rem;
+                margin: 2em;
 
                 @include mq(1024px) {
-                    margin: 0.4rem 0.6rem 0.4rem 0.8rem;
+                    margin: 1em;
                 }
         
                 @include mq(768px) {
-                    margin: 0.3rem 0.6rem 0.3rem 0.6rem;
+                    margin: 0.7rem;
                 }
         
                 @include mq(480px) {
-                    margin: 0.2rem 0.5rem 0.2rem 0.5rem;
+                    margin: 0.5rem;
                 }
             }
 
             img {
-                box-shadow: 0 0 1em rgb(21, 47, 99);
                 @include mq(768px) {
                     width: 150px;
                 }
