--- a/docs/css/pages/contacts.css
+++ b/docs/css/pages/contacts.css
@@ -15,7 +15,6 @@
     margin: 1rem auto;
     width: 90%;
     padding-bottom: 2rem;
-    font-size: 20px;
     display: flex;
     justify-content: center;
     align-items: center; }
@@ -70,3 +69,10 @@
           padding-left: 0; }
           .site-main section .second-part li {
             flex-basis: 10%; } }
+  .site-main .map {
+    margin: 0 auto;
+    text-align: center;
+    margin-bottom: 2rem; }
+    @media screen and (max-width: 768px) {
+      .site-main .map iframe {
+        width: 90%; } }
