--- a/_assets/scss/_site-header.scss
+++ b/_assets/scss/_site-header.scss
@@ -103,7 +103,7 @@
                     padding-top: 3rem;
                 }
                 @include mq(320px) {
-                    padding-top: 1rem;
+                    padding-top: 0;
                 }
             }
             p {
